--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,14 +8,9 @@ jobs:
     docker:
       # specify the version you desire here
       # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
-      - image: circleci/python:3.6.1
+      - image: circleci/python:3.6.4
 
-      # Specify service dependencies here if necessary
-      # CircleCI maintains a library of pre-built images
-      # documented at https://circleci.com/docs/2.0/circleci-images/
-      # - image: circleci/postgres:9.4
-
-    working_directory: ~/repo
+    working_directory: ~/project
 
     steps:
       - checkout
@@ -27,12 +22,11 @@ jobs:
       #      # fallback to using the latest cache if no exact match is found
       #      - v1-dependencies-
 
-      #- run:
+      - run:
       #    name: install dependencies
-      #    command: |
-      #      python3 -m venv venv
-      #      . venv/bin/activate
-      #      #pip install -r requirements.txt
+          command: |
+            sudo pip install pipenv
+            pipenv install
 
       #- save_cache:
       #    paths:
@@ -45,11 +39,5 @@ jobs:
       # https://pytest.org
       # https://nose.readthedocs.io
       - run:
-          name: run tests
           command: |
-            . venv/bin/activate
-            python factorization/Factorization.py
-
-      - store_artifacts:
-          path: test-reports
-          destination: test-reports
+            pipenv run python factorization/Factorization.py
