--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,7 +26,7 @@ jobs:
       #    name: install dependencies
           command: |
             sudo pip install pipenv
-            pipenv install
+            pipenv install numpy
 
       #- save_cache:
       #    paths:
