--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,8 +6,6 @@ version: 2
 jobs:
   build:
     docker:
-      # specify the version you desire here
-      # use `-browsers` prefix for selenium tests, e.g. `3.6.1-browsers`
       - image: circleci/python:3.6.4
 
     working_directory: ~/project
@@ -15,23 +13,12 @@ jobs:
     steps:
       - checkout
 
-      # Download and cache dependencies
-      #- restore_cache:
-      #    keys:
-      #      - v1-dependencies-{{ checksum "requirements.txt" }}
-      #      # fallback to using the latest cache if no exact match is found
-      #      - v1-dependencies-
-
       - run:
-      #    name: install dependencies
+          name: install dependencies
           command: |
             sudo pip install pipenv
             pipenv install numpy
 
-      #- save_cache:
-      #    paths:
-      #      - ./venv
-      #    key: v1-dependencies-{{ checksum "requirements.txt" }}
 
       # run tests!
       # this example uses Django's built-in test-runner
