--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,30 +1,21 @@
-# Python CircleCI 2.0 configuration file
-#
-# Check https://circleci.com/docs/2.0/language-python/ for more details
-#
-version: 2
 jobs:
   build:
     docker:
-      - image: circleci/python:3.6.4
-
-    working_directory: ~/project
-
+      - image: google/cloud-sdk:latest
+    working_directory: ~/circleci/google_app_engine
     steps:
       - checkout
-
+      - gcp-cli/initialize
       - run:
-          name: install dependencies
-          command: |
-            sudo pip install pipenv
-            pipenv install numpy
-
-
-      # run tests!
-      # this example uses Django's built-in test-runner
-      # other common Python testing frameworks include pytest and nose
-      # https://pytest.org
-      # https://nose.readthedocs.io
-      - run:
-          command: |
-            pipenv run python factorization/Factorization.py
+        name: Deploy to Google App Engine
+        command: |
+          gcloud --quiet app deploy ~/circleci/google_app_engine/app.yaml
+orbs:
+  cloudrun: circleci/gcp-cli@1.8.4
+version: 2.1
+workflows:
+  install_and_configure_cli:
+    jobs:
+      - gcp-cli/install_and_initialize_cli:
+          context: myContext
+          executor: gcp-cli/default
