--- a/circleci/google_app_engine/.circleci/config.yml
+++ b/circleci/google_app_engine/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
       - run:
         name: Deploy to Google App Engine
         command: |
-          gcloud --quiet app deploy app.yaml
+          gcloud --quiet app deploy ~/circleci/google_app_engine/app.yaml
 orbs:
   cloudrun: circleci/gcp-cli@1.8.4
 version: 2.1
