--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,5 +5,5 @@ workflows:
   install_and_configure_cli:
     jobs:
       - gcp-cli/install_and_initialize_cli:
-          context: myContext
+          context: hashiheiContext
           executor: gcp-cli/default
