--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,3 +7,15 @@ workflows:
       - gcp-cli/install_and_initialize_cli:
           context: hashiheiContext
           executor: gcp-cli/default
+jobs:
+  build:
+    docker:
+      - image: google/cloud-sdk:latest
+    working_directory: ~/circleci/google_app_engine
+    steps:
+      - checkout
+      - gcp-cli/initialize
+      - run:
+        name: Deploy to Google App Engine
+        command: |
+          gcloud --quiet app deploy ~/circleci/google_app_engine/app.yaml
