--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,11 +11,6 @@ jobs:
   build:
     docker:
       - image: google/cloud-sdk:latest
-    working_directory: ~/circleci/google_app_engine
+    working_directory: ~/project
     steps:
       - checkout
-      - gcp-cli/initialize
-      - run:
-        name: Deploy to Google App Engine
-        command: |
-          gcloud --quiet app deploy ~/circleci/google_app_engine/app.yaml
