--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,12 +15,12 @@ jobs:
       - run:
           command: |
             # Initialize gcloud CLI
-            echo $GCLOUD_SERVICE_KEY
-            echo $GOOGLE_PROJECT_ID
-            echo $GOOGLE_COMPUTE_ZONE
-            gcloud auth activate-service-account --key-file=$GCLOUD_SERVICE_KEY
-            gcloud --quiet config set project $GOOGLE_PROJECT_ID
-            gcloud --quiet config set compute/zone $GOOGLE_COMPUTE_ZONE
+            echo {$GCLOUD_SERVICE_KEY}
+            echo {$GOOGLE_PROJECT_ID}
+            echo {$GOOGLE_COMPUTE_ZONE}
+            gcloud auth activate-service-account --key-file={$GCLOUD_SERVICE_KEY}
+            gcloud --quiet config set project {$GOOGLE_PROJECT_ID}
+            gcloud --quiet config set compute/zone {$GOOGLE_COMPUTE_ZONE}
           name: Initialize gcloud CLI to connect to Google Cloud
 
   test_gcpcli_ver:
@@ -49,7 +49,8 @@ workflows:
   version: 2.1
   install_and_check:
     jobs:
-      - build_gcpcli
+      - build_gcpcli:
+        context: hashiheiContext
       - test_gcpcli_ver:
           requires:
             - build_gcpcli
