--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,8 +49,7 @@ workflows:
   version: 2.1
   install_and_check:
     jobs:
-      - build_gcpcli:
-#        context: hashiheiContext
+      - build_gcpcli
       - test_gcpcli_ver:
           requires:
             - build_gcpcli
