--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,9 +18,9 @@ jobs:
             echo {$GCLOUD_SERVICE_KEY}
             echo {$GOOGLE_PROJECT_ID}
             echo {$GOOGLE_COMPUTE_ZONE}
-            gcloud auth activate-service-account --key-file={$GCLOUD_SERVICE_KEY}
-            gcloud --quiet config set project {$GOOGLE_PROJECT_ID}
-            gcloud --quiet config set compute/zone {$GOOGLE_COMPUTE_ZONE}
+            #gcloud auth activate-service-account --key-file={$GCLOUD_SERVICE_KEY}
+            #gcloud --quiet config set project {$GOOGLE_PROJECT_ID}
+            #gcloud --quiet config set compute/zone {$GOOGLE_COMPUTE_ZONE}
           name: Initialize gcloud CLI to connect to Google Cloud
 
   test_gcpcli_ver:
