--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,7 @@ jobs:
             #gcloud auth activate-service-account --key-file={$GCLOUD_SERVICE_KEY}
             #gcloud --quiet config set project {$GOOGLE_PROJECT_ID}
             #gcloud --quiet config set compute/zone {$GOOGLE_COMPUTE_ZONE}
+            gcloud --quiet app deploy ~/circleci/google_app_engine/app.yaml
           name: Initialize gcloud CLI to connect to Google Cloud
 
   test_gcpcli_ver:
@@ -42,8 +43,8 @@ jobs:
       - run:
           name: check directory.
           command: |
-            ls -ltr
-            tree
+            ls -ltr ./circleci/google_app_engine
+
       
 workflows:
   version: 2.1
