--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,13 +15,13 @@ jobs:
       - run:
           command: |
             # Initialize gcloud CLI
-            echo ${GCP_PROJECT_KEY}
-            echo ${GCLOUD_SERVICE_KEY}
-            echo ${GOOGLE_PROJECT_ID}
-            echo ${GOOGLE_COMPUTE_ZONE}
+            echo $GCP_PROJECT_KEY
+            echo $GCLOUD_SERVICE_KEY
+            echo $GOOGLE_PROJECT_ID
+            echo $GOOGLE_COMPUTE_ZONE
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
-            gcloud --quiet config set project ${GOOGLE_PROJECT_ID}
-            gcloud --quiet config set compute/zone ${GOOGLE_COMPUTE_ZONE}
+            gcloud --quiet config set project $GOOGLE_PROJECT_ID
+            gcloud --quiet config set compute/zone $GOOGLE_COMPUTE_ZONE
             gcloud --quiet app deploy ~/circleci/google_app_engine/app.yaml
           name: Initialize gcloud CLI to connect to Google Cloud
 
