--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,7 +22,7 @@ jobs:
             echo $GCLOUD_SERVICE_KEY | gcloud auth activate-service-account --key-file=-
             gcloud --quiet config set project $GOOGLE_PROJECT_ID
             gcloud --quiet config set compute/zone $GOOGLE_COMPUTE_ZONE
-            gcloud --quiet app deploy ~/circleci/google_app_engine/app.yaml
+            gcloud --quiet app deploy ./circleci/google_app_engine/app.yaml
           name: Initialize gcloud CLI to connect to Google Cloud
 
   test_gcpcli_ver:
