--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,10 +19,11 @@ jobs:
           name: Initialize gcloud CLI to connect to Google Cloud
 
   test_gcpcli_ver:
-    working_directory: ~/project
-    docker:
-      - image: google/cloud-sdk:latest
+#    working_directory: ~/project
+#    docker:
+#      - image: google/cloud-sdk:latest
     steps:
+      - checkout
       - run:
           command: |
             #check gcloud version
