--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,7 +27,7 @@ jobs:
       - run:
           name: install local test environment.
           command: |
-            cd .circleci/google_app_engine
+            cd circleci/google_app_engine
             python3 -m venv env
             source env/bin/activate
             pip install -r requirements.txt
