--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,8 +23,8 @@ jobs:
             #check gcloud version
             gcloud version
             #install
-            apt-get install google-cloud-sdk-app-engine-python
-            apt-get install python3-venv
+            apt-get install -y google-cloud-sdk-app-engine-python
+            apt-get install -y python3-venv
       - checkout
       - run:
           name: install local test environment.
