--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ jobs:
             pip install -r requirements.txt
             pwd
             ls -ltr
-            python main.py
+            python main.py &
 
   test_gcpcli:
     working_directory: ~/project
