--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,14 +36,8 @@ jobs:
             pwd
             ls -ltr
             python main.py &
-
-  test_gcpcli:
-    working_directory: ~/project
-    docker:
-      - image: circleci/python
-    steps:
       - run:
-          name: check_webpage
+          name: test_check_webpage
           command: |
             export GET_URL="https://localhost:8080"
             curl -o result_local.html $GET_URL
@@ -81,13 +75,9 @@ workflows:
   install_and_check:
     jobs:
       - build_gcpcli
-      - test_gcpcli:
-          requires:
-            - build_gcpcli
       - deploy_gcpcli:
           requires:
             - build_gcpcli
-            - test_gcpcli
           filters:
             branches:
               only: master
