--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,19 +29,20 @@ jobs:
       - run:
           name: local test.
           command: |
-            cd circleci/google_app_engine
-            python3 -m venv env
-            source env/bin/activate
-            pip install -r requirements.txt
-            pwd
             ls -ltr
-            python main.py & > deploylog.txt
-            sleep 30
-            cat deploylog.txt
-            export GET_URL="http://127.0.0.1:8080"
-            curl -o result_local.html $GET_URL
-            cat result_local.html
-          background: true            
+#            cd circleci/google_app_engine
+#            python3 -m venv env
+#            source env/bin/activate
+#            pip install -r requirements.txt
+#            pwd
+#            ls -ltr
+#            python main.py & > deploylog.txt
+#            sleep 30
+#            cat deploylog.txt
+#            export GET_URL="http://127.0.0.1:8080"
+#            curl -o result_local.html $GET_URL
+#            cat result_local.html
+#          background: true            
 
   deploy_gcpcli:
     working_directory: ~/project
