--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,10 +30,11 @@ jobs:
           name: local test.
           command: |
             ls -ltr
-#            cd circleci/google_app_engine
-#            python3 -m venv env
-#            source env/bin/activate
-#            pip install -r requirements.txt
+            cd circleci/google_app_engine
+            python -m venv env
+            source env/bin/activate
+            ls -ltr
+            pip install -r requirements.txt
 #            pwd
 #            ls -ltr
 #            python main.py & > deploylog.txt
