--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -47,12 +47,12 @@ jobs:
             pip install -r requirements.txt
             pwd
             ls -ltr
-            python3 main.py & > test-reports/mainpy.log 2>&1
+            python3 main.py > test-reports/mainpy.log 2>&1
             sleep 30
 #            export GET_URL="http://127.0.0.1:8080"
 #            curl -o result_local.html $GET_URL
 #            cat result_local.html
-#          background: true            
+          background: true            
 
       - store_artifacts:
           path: test-reports/
